--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "next": "latest",
     "next-images": "^1.4.1",
     "react": "^16.13.1",
