--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "airtable": "^0.10.0",
     "axios": "^0.20.0",
     "next": "latest",
     "next-images": "^1.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-dropzone": "^11.1.0"
+    "react-dropzone": "^11.1.0",
+    "swr": "^0.3.2"
   },
   "devDependencies": {
     "postcss-flexbugs-fixes": "4.2.1",
