--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
+    "react-loadingg": "^1.7.2",
     "swr": "^0.3.2"
   },
   "devDependencies": {
