--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
+    "react-image-crop": "^8.6.5",
     "react-loadingg": "^1.7.2",
-    "swr": "^0.3.2"
+    "swr": "^0.3.2",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "postcss-flexbugs-fixes": "4.2.1",
